[package]
name = "isobox"
version = "0.1.0"
edition = "2021"
description = "Secure Code Execution API - Execute arbitrary code in isolated Docker containers"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "isobox"
path = "src/main.rs"
