[package]
name = "isobox"
version = "0.1.0"
edition = "2021"
description = "Secure Code Execution API - Execute arbitrary code in isolated Docker containers"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]



[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"

# gRPC dependencies
tonic = "0.10"
prost = "0.12"
futures = "0.3"

# Authentication dependencies
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json"] }
config = "0.13"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
rustls = "0.21"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
futures-util = "0.3"

# CORS support
actix-cors = "0.6"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "isobox"
path = "src/main.rs"
